--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                     </ul>
                     <a href="https://buy.stripe.com/test_6oU28t1vP3ek1JWdmScEw00" class="block w-full bg-gray-200 text-gray-800 py-2 rounded-md text-center font-medium hover:bg-gray-300 transition duration-300">Select Plan</a>
                 </div>
-                <div class="pricing-card bg-white border-2 border-blue-500 rounded-lg p-6 shadow-lg transition duration-300 transform scale-105">
-                    <div class="bg-blue-500 text-white text-sm font-bold px-3 py-1 rounded-full inline-block mb-3">Most Popular</div>
+                <div class="pricing-card bg-white border-2 border-blue-500 rounded-lg p-6 shadow-lg transition duration-300 transform scale-105 relative">
+                    <div class="bg-blue-500 text-white text-sm font-bold px-3 py-1 rounded-full absolute -top-3 -right-3">Most Popular</div>
                     <h3 class="text-xl font-semibold mb-4">Two Assessments</h3>
                     <div class="text-3xl font-bold mb-4">$449</div>
                     <div class="text-sm text-gray-600 mb-4">Save $69 vs single assessment</div>
@@ -264,7 +264,9 @@
                             <span>Standard email support</span>
                         </li>
                     </ul>
-                    <a href="#assessment" class="block w-full bg-blue-600 text-white py-2 rounded-md text-center font-medium hover:bg-blue-700 transition duration-300">Select Plan</a>
+                    <div class="mt-auto pt-4">
+                        <a href="#assessment" class="block w-full bg-blue-600 text-white py-2 rounded-md text-center font-medium hover:bg-blue-700 transition duration-300">Select Plan</a>
+                    </div>
                 </div>
                 <div class="pricing-card bg-white border border-gray-200 rounded-lg p-6 transition duration-300">
                     <h3 class="text-xl font-semibold mb-4">Four Assessments</h3>
