--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
     <section id="pricing" class="py-16 bg-white">
         <div class="container mx-auto px-6">
             <h2 class="text-3xl font-bold text-center mb-12">Choose Your Assessment Plan</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
-                <div class="pricing-card bg-white border border-gray-200 rounded-lg p-6 transition duration-300">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 items-stretch">
+                <div class="pricing-card bg-white border border-gray-200 rounded-lg p-6 transition duration-300 flex flex-col">
                     <h3 class="text-xl font-semibold mb-4">Single Assessment</h3>
                     <div class="text-3xl font-bold mb-4">$259</div>
-                    <ul class="space-y-3 mb-6">
+                    <ul class="space-y-3 mb-6 flex-grow">
                         <li class="flex items-start">
                             <i class="fas fa-check text-green-500 mt-1 mr-2"></i>
                             <span>One full health report</span>
@@ -239,14 +239,14 @@
                             <span>Standard email support</span>
                         </li>
                     </ul>
-                    <a href="https://buy.stripe.com/test_6oU28t1vP3ek1JWdmScEw00" class="block w-full bg-gray-200 text-gray-800 py-2 rounded-md text-center font-medium hover:bg-gray-300 transition duration-300">Select Plan</a>
+                    <a href="https://buy.stripe.com/test_6oU28t1vP3ek1JWdmScEw00" class="block w-full bg-gray-200 text-gray-800 py-2 rounded-md text-center font-medium hover:bg-gray-300 transition duration-300 mt-auto">Select Plan</a>
                 </div>
-                <div class="pricing-card bg-white border-2 border-blue-500 rounded-lg p-6 shadow-lg transition duration-300 transform scale-105 relative">
+                <div class="pricing-card bg-white border-2 border-blue-500 rounded-lg p-6 shadow-lg transition duration-300 transform scale-105 relative flex flex-col">
                     <div class="bg-blue-500 text-white text-sm font-bold px-3 py-1 rounded-full absolute -top-3 -right-3">Most Popular</div>
                     <h3 class="text-xl font-semibold mb-4">Two Assessments</h3>
                     <div class="text-3xl font-bold mb-4">$449</div>
                     <div class="text-sm text-gray-600 mb-4">Save $69 vs single assessment</div>
-                    <ul class="space-y-3 mb-6">
+                    <ul class="space-y-3 mb-6 flex-grow">
                         <li class="flex items-start">
                             <i class="fas fa-check text-green-500 mt-1 mr-2"></i>
                             <span>Two full health reports</span>
@@ -264,15 +264,13 @@
                             <span>Standard email support</span>
                         </li>
                     </ul>
-                    <div class="mt-auto pt-4">
-                        <a href="#assessment" class="block w-full bg-blue-600 text-white py-2 rounded-md text-center font-medium hover:bg-blue-700 transition duration-300">Select Plan</a>
-                    </div>
+                    <a href="#assessment" class="block w-full bg-blue-600 text-white py-2 rounded-md text-center font-medium hover:bg-blue-700 transition duration-300 mt-auto">Select Plan</a>
                 </div>
-                <div class="pricing-card bg-white border border-gray-200 rounded-lg p-6 transition duration-300">
+                <div class="pricing-card bg-white border border-gray-200 rounded-lg p-6 transition duration-300 flex flex-col">
                     <h3 class="text-xl font-semibold mb-4">Four Assessments</h3>
                     <div class="text-3xl font-bold mb-4">$799</div>
                     <div class="text-sm text-gray-600 mb-4">Save $237 vs single assessments</div>
-                    <ul class="space-y-3 mb-6">
+                    <ul class="space-y-3 mb-6 flex-grow">
                         <li class="flex items-start">
                             <i class="fas fa-check text-green-500 mt-1 mr-2"></i>
                             <span>Quarterly health reports</span>
@@ -290,12 +288,12 @@
                             <span>Price-lock guarantee</span>
                         </li>
                     </ul>
-                    <a href="#assessment" class="block w-full bg-gray-200 text-gray-800 py-2 rounded-md text-center font-medium hover:bg-gray-300 transition duration-300">Select Plan</a>
+                    <a href="#assessment" class="block w-full bg-gray-200 text-gray-800 py-2 rounded-md text-center font-medium hover:bg-gray-300 transition duration-300 mt-auto">Select Plan</a>
                 </div>
-                <div class="pricing-card bg-white border border-gray-200 rounded-lg p-6 transition duration-300">
+                <div class="pricing-card bg-white border border-gray-200 rounded-lg p-6 transition duration-300 flex flex-col">
                     <h3 class="text-xl font-semibold mb-4">Free Snapshot</h3>
                     <div class="text-3xl font-bold mb-4">$0</div>
-                    <ul class="space-y-3 mb-6">
+                    <ul class="space-y-3 mb-6 flex-grow">
                         <li class="flex items-start">
                             <i class="fas fa-check text-green-500 mt-1 mr-2"></i>
                             <span>Mini health assessment</span>
@@ -313,9 +311,10 @@
                             <span>Personalized tips in 48 hours</span>
                         </li>
                     </ul>
-                    <a href="#snapshot" class="block w-full bg-gray-200 text-gray-800 py-2 rounded-md text-center font-medium hover:bg-gray-300 transition duration-300">Try For Free</a>
+                    <a href="#snapshot" class="block w-full bg-gray-200 text-gray-800 py-2 rounded-md text-center font-medium hover:bg-gray-300 transition duration-300 mt-auto">Try For Free</a>
                 </div>
             </div>
+        </div>
             
             <!-- FAQ Section -->
             <div class="mt-16 max-w-3xl mx-auto">
